--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
+  "homepage": "https//yunninghongyun.github.io/react-bushu1",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
