--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-  "homepage": "https//yunninghongyun.github.io/react-bushu1",
+  "homepage": "https://yunninghongyun.github.io/react-bushu1/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
